# Time-stamp: "2003-09-15 01:01:36 ADT"

NEXT

    [THINGS THAT MAY BREAK YOUR CODE]
    * The store_declarations() method has been removed.

    [FIXES]
    * The DOCTYPE declaration now always gets put back at the top of
      the recreated document.  Thanks, Terrence Brannon.

    [DOCUMENTATION]
    * Updated docs from Terrence Brannon.

2005-11-09   Andy Lester

   Release 3.19_01 -- No new functionality.  New tests, though!
   Thanks to the Chicago Perl Mongers for their work.

2003-09-15   Sean M. Burke <sburke@cpan.org>

   Release 3.18 -- bugfix to test, adding qr// to look_(down|up)

   Accepting Iain 'Spoon' Truskett's neat patch for qr// as lookdown
   operators (previously you had to do sub { $_[0]=~ m/.../}).

   Rewrote some tests, notably parsefile.t, which was pointlessly
   failing because of an incompatibility with an HTML::Parser version.

   Removed the disused ancient utils "dtd2pm" and "ent" from the dist.

   Added TODO file.


2003-01-18   Sean M. Burke <sburke@cpan.org>

   Release 3.17 -- minor bugfix

   HTML::Element : Making as_HTML('',...) work just like
   as_HTML(undef,...).  Also fixing as_XML's docs to remove mention of
   an unimplemented feature (specifying what characters to escape).


2002-11-06   Sean M. Burke <sburke@cpan.org>

   Release 3.16 -- just fixing a doc typo.


2002-11-06   Sean M. Burke <sburke@cpan.org>

   Release 3.15 -- a few new features.

   Added the aliases "descendents" and "find" to HTML::Element.

   Added a new method "simplify_pres" to HTML::Element.   


2002-10-19   Sean M. Burke <sburke@cpan.org>
   Release 3.14 -- minor bugfix

   Just fixes a few problems in HTML::Element with the number_lists
   method.


2002-08-16   Sean M. Burke <sburke@cpan.org>

   Release 3.13 -- basically a bugfix version

   It turns out that 3.12 had a hideous HTML::TreeBuilder bug that
   made the whole thing damn near useless.  Fixed.
   Many many thanks to Michael Koehne for catching this!
